fix:z-index of smaller screens #373

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3320,7 +3320,7 @@ body.modal-open, body.modal-open main {
 
     .grid-box-2 {
       width: 100%;
-      z-index: 9999;
+      z-index: 1;
       grid-area: box2;
       max-height: 100%;
       height: 100%;
